--- a/build.gradle
+++ b/build.gradle
@@ -14,9 +14,11 @@ repositories {
 dependencies {
     compile 'org.scala-lang:scala-library:2.12.1'
     compile group: 'org.scalafx', name: 'scalafx_2.12', version: '8.0.102-R11'
-    compile group: 'org.testng', name: 'testng', version: '6.11'
-    compile group: 'org.assertj', name: 'assertj-core', version: '3.6.2'
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.5'
 
+    testCompile group: 'org.testng', name: 'testng', version: '6.11'
+    testCompile group: 'org.assertj', name: 'assertj-core', version: '3.6.2'
+    testCompile group: 'org.mockito', name: 'mockito-core', version: '2.7.15'
     testCompile group: 'org.scalatest', name: 'scalatest_2.12', version: '3.0.1'
     testRuntime group: 'org.pegdown', name: 'pegdown', version: '1.6.0'
 }
