--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,17 @@ repositories {
     mavenCentral()
 }
 
+sourceSets {
+    main {
+        scala {
+            srcDirs = ['src/main/scala', 'src/main/java']
+        }
+        java {
+            srcDirs = []
+        }
+    }
+}
+
 dependencies {
     compile 'org.scala-lang:scala-library:2.12.1'
     compile group: 'org.scalafx', name: 'scalafx_2.12', version: '8.0.102-R11'
