--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,8 @@ sourceSets {
 
 dependencies {
     compile 'org.scala-lang:scala-library:2.12.1'
+    // https://mvnrepository.com/artifact/org.scala-lang/scala-library
+    compile group: 'org.scala-lang', name: 'scala-library', version: '2.12.0-RC1-be43eb5'
     compile group: 'org.scalafx', name: 'scalafx_2.12', version: '8.0.102-R11'
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.5'
 
@@ -32,5 +34,14 @@ dependencies {
     testCompile group: 'org.mockito', name: 'mockito-core', version: '2.7.15'
     testCompile group: 'org.scalatest', name: 'scalatest_2.12', version: '3.0.1'
     testRuntime group: 'org.pegdown', name: 'pegdown', version: '1.6.0'
+}
+
+jar {
+    manifest {
+        attributes(
+                'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
+                'Main-Class': 'org.kirhgoff.morphoid.MorphoidApp'
+        )
+    }
 }
 
