--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,9 @@ dependencies {
     testCompile group: 'org.mockito', name: 'mockito-core', version: '2.7.15'
     testCompile group: 'org.scalatest', name: 'scalatest_2.12', version: '3.0.1'
     testRuntime group: 'org.pegdown', name: 'pegdown', version: '1.6.0'
+    // https://mvnrepository.com/artifact/org.scalamock/scalamock-scalatest-support_2.12
+    testCompile group: 'org.scalamock', name: 'scalamock-scalatest-support_2.12', version: '3.6.0'
+
 }
 
 jar {
