--- a/morphoid-java-ui/build.gradle
+++ b/morphoid-java-ui/build.gradle
@@ -50,3 +50,18 @@ jar {
     }
 }
 
+test {
+    useTestNG()    
+
+    include 'org/kirhgoff/morphoid/**'
+
+    beforeTest { descriptor ->
+        logger.lifecycle("Running test: " + descriptor)
+    }
+
+    onOutput { descriptor, event ->
+        logger.lifecycle("Test: " + descriptor + " produced standard out/err: " + event.message )
+    }
+}
+
+
