--- a/morphoid-java-ui/build.gradle
+++ b/morphoid-java-ui/build.gradle
@@ -16,13 +16,13 @@ apply plugin: 'application'
 repositories {
     // Use jcenter for resolving your dependencies.
     // You can declare any Maven/Ivy/file repository here.
-    jcenter()
+    mavenCentral()
     mavenLocal()
 }
 
 dependencies {
     // This dependency is found on compile classpath of this component and consumers.
-    compile 'com.google.guava:guava:22.0'
+    //compile 'com.google.guava:guava:22.0'
     compile 'org.apache.commons:commons-lang3:3.5'
 
     compile 'org.kirhgoff:morphoid-bridge:2.0'
