--- a/morphoid-engine/build.gradle
+++ b/morphoid-engine/build.gradle
@@ -20,8 +20,10 @@ repositories {
 // }
 
 dependencies {
+    //compile group: 'org.kirhgoff', name: 'morphoid-bridge', version: '2.0'
+    //compile project(':morphoid-bridge')
+
     compile group: 'org.scala-lang', name: 'scala-library', version: '2.12.6'
-    compile group: 'org.kirhgoff', name: 'morphoid-bridge', version: '2.0'
 
     testCompile group: 'org.scalatest', name: 'scalatest_2.12', version: '3.0.5'
     testCompile group: 'org.scalamock', name: 'scalamock-scalatest-support_2.12', version: '3.6.0'
@@ -33,24 +35,22 @@ dependencies {
     //'ch.qos.logback' %  'logback-classic'   % '1.1.3',
 }
 
-test {
-    maxParallelForks = 1
-}
-
-publishing {
-    publications {
-        mavenJava(MavenPublication) {
-            groupId 'org.kirhgoff'
-            artifactId 'morphoid-engine'
-            version '2.0'
+// publishing {
+//     publications {
+//         mavenJava(MavenPublication) {
+//             groupId 'org.kirhgoff'
+//             artifactId 'morphoid-engine'
+//             version '2.0'
             
-            from components.java
-        }
-    }
-}
+//             from components.java
+//         }
+//     }
+// }
 
 test {
     useJUnit()
+
+    maxParallelForks = 1
 
     include 'org/kirhgoff/morphoid/engine/**'
 
